# letraz-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.encore-base  OpenAPI.yml  README.md  conftest.py  docker.sh  hello.py  infra-config.json  integration_tests.py  manage.py  mock_helpers.py  openapi.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  schema.yml  start-servers.sh
.circleci/: README.md  config.yml  continue-config.yml  deploy.sh
CORE/: CORE.http  admin.py  admin_api_urls.py  admin_api_views.py  api_urls.py  api_views.py  models.py  serializers.py  services.py
CORE/grpc/: CORE.proto  CORE_pb2.py  CORE_pb2_grpc.py
CORE/migrations/: 0001_initial.py  0002_waitlist_has_access.py  0003_process.py
CORE/tests/: __init__.py  test_models.py  test_serializers.py  test_views.py
JOB/: RESUME.http  admin.py  api_urls.py  api_views.py  models.py  proto_serializers.py  proto_serialzers.py  serializers.py  services.py
JOB/grpc/: JOB.proto  JOB_pb2.py  JOB_pb2_grpc.py
JOB/migrations/: 0001_initial.py  0002_job_process_job_processing.py  (+1 more)
JOB/tests/: __init__.py  (+3 more)
PROFILE/: PROFILE.http  admin.py  api_urls.py  api_views.py  models.py  serializers.py
RESUME/: RESUME.http  admin.py  admin_api_urls.py  admin_api_views.py  algolia_serializer.py  api_urls.py  api_views.py  apps.py  doc_only_serializers.py  index.py  models.py  proto_serializers.py  serializers.py  services.py  signals.py  utils.py
letraz_server/: admin_api_urls.py  api_urls.py  asgi.py  handlers.py  settings.py  urls.py  wsgi.py
scripts/: deploy.sh  migrate.mjs
(+64 files in other folders)
