[project]
name = "letraz-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.4",
    "django-cors-headers>=4.6.0",
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.28.0",
    "nanoid>=2.0.0",
    "python-dotenv>=1.0.1",
    "sentry-sdk[django]>=2.19.2",
]
