[project]
name = "letraz-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-cors-headers>=4.6.0",
    "djangorestframework>=3.15.2",
    "drf-spectacular>=0.28.0",
    "nanoid>=2.0.0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "sentry-sdk[django]>=2.19.2",
    "djangorestframework-jwt>=1.11.0",
    "cryptography>=36.0.1",
    "psycopg2>=2.9.10",
    "knockapi>=1.9.0",
    "grpcio>=1.73.1",
    "grpcio-tools>=1.73.1",
    "protobuf>=6.31.1",
    "django-socio-grpc>=0.24.4",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.2",
]
